@@ -2,8 +2,8 @@ Package: memisc
 Type: Package
 Title: Tools for Management of Survey Data, Graphics, Programming, Statistics, and
           Simulation
-Version: 0.96-5
-Date: 2013-03-22
+Version: 0.96-6
+Date: 2013-07-28
 Authors@R:
           c(person("Martin","Elff",role=c("aut","cre"),email="martin.elff@uni-konstanz.de"),
           person(c("Christopher"," N."),"Lawrence",role="ctb"),
